Blog output added Application Object added mysql db added

--- a/Blog/app/views/index.scala.html
+++ b/Blog/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@main("Blogs") {
+@(blogs: List[Blog]) @main("Blogs") {
 <form class="navbar-form pull-right">
 	<input class="span2" type="text" placeholder="Email"> <input
 		class="span2" type="password" placeholder="Password">
@@ -13,12 +13,10 @@
 
 <!-- Example row of columns -->
 <div class="row">
+	@for(blog <- blogs) {
 	<div class="span12">
-		<h2>Blogentry 1</h2>
-		<p>Donec id elit non mi porta gravida at eget metus. Fusce
-			dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
-			fermentum massa justo sit amet risus. Etiam porta sem malesuada magna
-			mollis euismod. Donec sed odio dui.</p>
+		<h2>@blog.header</h2>
+		<p>@blog.text</p>
 		<blockquote>
 			<p>LComment 1</p>
 			<small>By Person1</small>
@@ -28,6 +26,6 @@
 			<small>By Person2</small>
 		</blockquote>
 	</div>
+	}
 </div>
-
 }
